force-app/main/default/objects/Industry__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if it&apos;s an industry that is currently open.</description>
    <inlineHelpText>Checked if it&apos;s an industry that is currently open.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>