force-app/main/default/objects/Industry__c/fields/CPL_Active__c.field-meta.xml
<CustomField>
    <fullName>CPL_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPL Active</label>
    <type>Checkbox</type>
</CustomField>