force-app/main/default/objects/Industry__c/fields/Door_Tag_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Door_Tag_Unit_Price__c</fullName>
    <label>Door Tag Unit Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>