force-app/main/default/objects/Industry__c/fields/Include_in_Project_Yes__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Project_Yes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This industry is to be called in the project yes campaigns</description>
    <inlineHelpText>This industry is to be called in the project yes campaigns</inlineHelpText>
    <label>Include in Project Yes</label>
    <type>Checkbox</type>
</CustomField>