force-app/main/default/objects/Industry__c/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <label>Industry Code</label>
    <length>29</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>