force-app/main/default/objects/Industry__c/fields/NuCard_CPL_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>NuCard_CPL_Unit_Price__c</fullName>
    <label>NuCard CPL Unit Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>