force-app/main/default/objects/Industry__c/fields/OB_Campaign_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Unit_Price__c</fullName>
    <label>OB Campaign Unit Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>