force-app/main/default/objects/Industry__c/fields/OBC_Active__c.field-meta.xml
<CustomField>
    <fullName>OBC_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to Check the industry is active or not</description>
    <label>OBC Active</label>
    <type>Checkbox</type>
</CustomField>