force-app/main/default/objects/Industry__c/fields/Porch_Pro_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Porch_Pro_Unit_Price__c</fullName>
    <label>Porch Pro Unit Price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>