force-app/main/default/objects/Industry__c/fields/Pricebook_To_Display__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_To_Display__c</fullName>
    <description>This field will indicate this industry should display for Add Quote and Product Override VF industry field drop down or not.</description>
    <label>Pricebook To Display</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>nuHome OB Campaign</fullName>
            </value>
            <value>
                <fullName>nuHome nuCard CPL</fullName>
            </value>
            <value>
                <fullName>nuHome Door Tag Script</fullName>
            </value>
            <value>
                <fullName>nuHome nuCard SUB</fullName>
            </value>
            <value>
                <fullName>nuHome SPEC CPL</fullName>
            </value>
            <value>
                <fullName>nuHome nuCard SPEC</fullName>
            </value>
            <value>
                <fullName>nuHome Hot Leads - Tier 3</fullName>
            </value>
            <value>
                <fullName>nuHome Hot Leads - Tier 2</fullName>
            </value>
            <value>
                <fullName>nuHome Hot Leads - Tier 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>