force-app/main/default/objects/Industry__c/listViews/All_Industries.listView-meta.xml
<ListView>
    <fullName>All_Industries</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>OBC_Active__c</columns>
    <columns>Active__c</columns>
    <columns>CPL_Active__c</columns>
    <columns>Door_Tag_Unit_Price__c</columns>
    <columns>Industry_Code__c</columns>
    <columns>NuCard_CPL_Unit_Price__c</columns>
    <columns>OB_Campaign_Unit_Price__c</columns>
    <columns>Porch_Pro_Unit_Price__c</columns>
    <columns>Pricebook_To_Display__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Industries</label>
</ListView>