force-app/main/default/objects/Industry__c/listViews/OB_Industries_Active.listView-meta.xml
<ListView>
    <fullName>OB_Industries_Active</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Include_in_Project_Yes__c</columns>
    <columns>OBC_Active__c</columns>
    <columns>Active__c</columns>
    <columns>CPL_Active__c</columns>
    <columns>Door_Tag_Unit_Price__c</columns>
    <columns>Industry_Code__c</columns>
    <columns>NuCard_CPL_Unit_Price__c</columns>
    <columns>OB_Campaign_Unit_Price__c</columns>
    <columns>Porch_Pro_Unit_Price__c</columns>
    <columns>Pricebook_To_Display__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OB_Campaign_Unit_Price__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>OB Industries Active</label>
</ListView>